<resources>
    <string name="app_name">MyVoiceAlarm</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="notification_channel_id" translatable="false">voice_alarm_channel</string>
    <string name="notification_channel_name" translatable="true">Voice Alarm</string>
    <string name="snooze">Snooze</string>
    <string name="notification_title">Voice Alarm Timer</string>
    <string name="you_dont_have_an_alarm">you don\'t have an alarm</string>
    <string name="voice_alarm">Voice Alarm</string>
    <string name="reminder_later">Reminder later</string>
    <string name="notice">Notice</string>
    <string name="delete_alarm_confirm">Do you want to delete this alarm?</string>
    <string name="text_title_record_alarm">Press and hold to record alarm</string>
    <string name="text_library">Library</string>
    <string name="text_default">Default</string>
    <string name="text_sound">Sound</string>
    <string name="text_more">More</string>
    <string name="text_repeat">Repeat</string>
    <string name="text_everyday">Everyday</string>
    <string name="text_vibrate">Vibrate</string>
    <string name="text_notes">Name</string>
    <string name="text_add">Add</string>
    <string name="text_only_once">Only Once</string>
    <string name="start_alarm">The alarm starts after:</string>
    <string name="txt_name_alarm">Alarm name</string>
    <string name="txt_hill_alarm">Alarm bells</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="font_italic">fonts/Poppins-BlackItalic.ttf</string>
    <string name="font_bold">fonts/Poppins-Bold.ttf</string>
    <string name="font_regular">fonts/Poppins-Regular.ttf</string>
    <string name="font_black">fonts/Poppins-Black.ttf</string>
    <string name="font_medium">font/Poppins_medium500.ttf</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tv_batter_obtimize">Battery Optimize</string>
    <string name="tv_ram_obtimize">Ram Optimize</string>
    <string name="tv_cpu_booster">CPU Booster</string>
    <string name="tv_internet_speed">Internet Speed</string>
    <string name="tv_delete_duplicate">Delete Duplicate</string>
    <string name="tv_change_vpn">Change VPN</string>
    <string name="connecting_time">Connecting Time</string>
    <string name="overall">Overall</string>
    <string name="txt_optimizer">Optimizer</string>
    <string name="ram_currently_used">Ram currently used</string>
    <string name="ram_total">Total amount of RAM</string>
    <string name="ram_usage">Ram Usage</string>
    <string name="download_mbps">DOWNLOAD Mbps</string>
    <string name="upload_mbps">UPLOAD Mbps</string>
    <string name="ping_ms">PING ms</string>
    <string name="check">Check</string>
    <string name="location_checked">Location checked</string>
    <string name="internet_speed">Internet Speed</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="ex_living_room">Ex: Living Room</string>
    <string name="name_location">Location name</string>
    <string name="tv_application">Application developed</string>
    <string name="tv_by_company">by Merry Blue</string>
    <string name="tv_looking_duplicate">Looking for duplicate files</string>
    <string name="tv_used_storage">Used Storage</string>
    <string name="tv_title_delete_duplicate">Delete Duplicate</string>
    <string name="tv_title_android">Android</string>
    <string name="tv_title_obtimze">Optimize</string>
    <string name="tv_available">Available:</string>
    <string name="tv_total">Total:</string>
    <string name="tv_used">Used</string>
    <string name="tv_can_deleted">Can deleted</string>
    <string name="tv_analysis">Analysis</string>
    <string name="tv_same_photo">Same photo</string>
    <string name="tv_low_quality">Low quality photo</string>
    <string name="tv_same_video">Same Video</string>
    <string name="tv_same_file">Same File</string>
    <string name="tv_optimize_memory">You can optimize memory</string>
    <string name="tv_delete_image">Delete Image</string>
    <string name="tv_delete_file">Delete File</string>
    <string name="tv_delete_video">Delete Video</string>
    <string name="tv_des_delete_image">You can delete unnecessary photos</string>
    <string name="tv_des_delete_file">You can delete files</string>
    <string name="tv_des_delete_video">You can delete the video</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="title_privacy">Privacy</string>
    <string name="title_language">Language</string>
    <string name="title_about_app">About App</string>
    <string name="about_app">About App</string>
    <string name="txt_label_privacy">Best Apps to Hide Photos</string>
    <string name="title_share_with_fr">Share with friends</string>
    <string name="privacy_polity">Privacy polity</string>
    <string name="title_feedback">Feedback</string>
    <string name="at_voice_alarm_apps"><![CDATA[At Voice alarm Apps we recognize that privacy is significant. This Privacy Policy applies to all apps (Android) under the publisher name of Voice alarm Apps. We has created this Policy to explain our privacy practices so you can understand what information about you is collected, used and disclosed. We collect information from you in order to provide corresponding service and better user experience. With your consent of this Privacy Policy, your usage, statistics, input while using our apps would be collected. INFORMATION COLLECTION & USE Generally. We may collect personal information from our users in order to provide you with a personalized, useful and efficient experience. The categories of information we collect can include: Social network\'s personal information and device\'s gallery pictures. Non-personal identification. We may collect non-personal identification information about installed applications, application usage information and device information. The information you give us, for example, when you give us your opinions to our application and services via our feedback channel, such as your email address, and names. EU USER CONSENT POLICY We include certain disclosures to users in the European Economic Area (EEA) & obtain their consent to use cookies or other local storage, where legally required, and to use personal data (such as AdID) to serve ads. This policy reflects the requirements of the EU ePrivacy Directive and the General Data Protection Regulation (GDPR). We ask about permission of users which are in EEA(European Economic Area) to display ads like PERSONALIZE/NON-PERSONALIZE. Learn about EU User Consent Policy : EU User Consent Policy PRIVACY POLICY OF THIRD PARTY SERVICE PROVIDERS USED BY THE APP For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request is retained on your device and is not collected by me in any way The app does use third party services that may collect information used to identify you. Google Play Services AdMob Firebase Analytics HOW WE USE COLLECTED INFORMATION We may use your information only for serving you better as below: To personalize user experience To help develop our service- We may use Non- Personal Information to provide, maintain, improve and develop our services; We may collect your non-personal information and use them for market and promotion purpose, for example, we may promote or recommend more relevant apps to you. We use this information to operate, maintain, and provide to you the features and functionality of our Apps, as well as to communicate directly with you, such as to send you email messages and push notifications. We may also send you Service-related emails or messages (e.g., account verification, order confirmations, change or updates to features of our apps, technical and security notices). HOW YOUR INFORMATION MAY BE DISCLOSED Personal Information. We do not store Personal Information and therefore we do not disclose your Personal Information. Non-Personal Information. We do not combine Non-Personal Information with Personal Information (such as combining your name with your unique User Device number). We may disclose your non-personal information for promotion purpose to our trusted partners who shall comply with this privacy policy and the relevant privacy laws. THIRD- PARTY SITES In general, the Applications, the Services and the Site access third party information (such as your Facebook account information) through application interfaces. We may provide links to third-party Web sites, such as Facebook, as a service to our Users. The Site may also carry advertisements from other companies. When you click on links of third parties in an Application, the Services or the Site, you may leave the Application, the Services or the Site. Some of these third party sites may be co-branded with our name/logo or our affiliated entity\'s name/logo, even though they are not operated or maintained by us. This Policy does not address, and we are not responsible for, the privacy practices of Web sites operated by third parties, whether they are linked to or otherwise accessible from an Application, the Services or the Site. The inclusion of a link or accessibility of third party Websites does not imply endorsement of such third party Website by us USERS WITH WHOM YOU SHARE YOUR INFORMATION We cannot control the actions of other Users with whom you share your information. We cannot, and do not, control the information you share with other Users using an Application, the Services or the Site (including via Forums) or how such other Users will use or share such information. We are not responsible for third party circumvention of our security measures. SECURITY We are very concerned about safeguarding the confidentiality of your information. We do not collect Personal Information, and we employ administrative, physical and electronic measures designed to protect your Non-Personal Information from unauthorized access and use. Please be aware that no security measures that we take to protect your information is absolutely guaranteed to avoid unauthorized access or use of your Non-Personal Information which is impenetrable. SENSITIVE INFORMATION We ask that you not send us, and you not to disclose, any sensitive Personal Information (e.g., information related to racial or ethnic origin, political opinions, religion or other beliefs, health, sexual orientation, criminal background or membership in past organizations, including trade union memberships) on or through an Application, the Services or the Site or otherwise to us. CHANGES TO THIS PRIVACY POLICY Our Privacy Policy may change from time to time, we will post any privacy policy changes on this page, so please review it periodically. We may provide you additional forms of notice of modifications or updates as appropriate under the circumstances. If you do not agree to any modifications to this Policy, your sole recourse is to immediately stop all use of all Applications, the Services and the Site. Your continued use of any Application, the Services or the Site following the posting of any modifications to this Policy will constitute your acceptance of the revised Policy. Please note that none of our employees or agents has the authority to vary any of our Policies.]]></string>
</resources>