<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_13sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/txt_name_alarm"
        android:textColor="@color/color22313F"
        android:textSize="@dimen/_20ssp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtNameAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRepeat"
        android:hint="@string/txt_hill_alarm"
        android:textColor="@color/color8D959D" />


    <LinearLayout
        android:id="@+id/ln"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtNameAlarm"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24sdp"
            android:text="@string/cancel"
            android:textColor="@color/color8D959D" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18sdp"
            android:text="@string/text_add"
            android:textColor="@color/color6D86F1" />
    </LinearLayout>

</RelativeLayout>