<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/_16sdp"
    android:paddingStart="@dimen/_16sdp"
    android:paddingTop="@dimen/_24sdp"
    android:paddingEnd="@dimen/_16sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLibrary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_2sdp"
        android:text="@string/text_library"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/color22313F"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLibrary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_below="@id/tvLibrary"
        android:layout_marginTop="@dimen/_8sdp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ln"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rvLibrary"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24sdp"
            android:text="@string/cancel"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/color8D959D" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/text_add"
            android:textColor="@color/color6D86F1" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>