<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color242B48"
    android:orientation="vertical"
    android:paddingTop="@dimen/_24sdp">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleSettingScreen"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/title_privacy"
            android:textColor="@color/white"
            android:textSize="@dimen/_25ssp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_back"
            android:visibility="invisible" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/roboto_regular"
        android:layout_toEndOf="@id/clockSettingIcon"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:text="@string/txt_label_privacy"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/material_motion_duration_long_1"
        android:padding="@dimen/_16sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_description_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/at_voice_alarm_apps"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />


    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>